visibility fix

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -69,6 +69,7 @@
         z-index: 1500;
         opacity: 0;
         width: 0;
+        visibility: hidden;
         transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
 
@@ -117,6 +118,7 @@
     &__checkobox:checked~&__nav {
         opacity: 1;
         width: 100%;
+        visibility: visible;
     }
 
     &__checkobox:checked+&__button &__icon {
